# STS2012_Final_Project

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
model/: class_indices.json
src/: main.py
src/cnn/: cnn.py  stats.py  utils.py
src/face_recognition/: face_recognition.py
src/sign_recognition/: sign_recognition.py
