[tool.poetry]
name = "sts2012-final-project"
version = "0.1.0"
description = "Final project for STS2012"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.1"
absl-py = "2.2.2"
art = "6.5"
astunparse = "1.6.3"
black = "25.1.0"
certifi = "2025.4.26"
charset-normalizer = "3.4.2"
click = "8.2.1"
contourpy = "1.3.2"
cycler = "0.12.1"
flatbuffers = "25.2.10"
fonttools = "4.58.0"
gast = "0.6.0"
google-pasta = "0.2.0"
grpcio = "1.71.0"
h5py = "3.13.0"
idna = "3.10"
isort = "6.0.1"
joblib = "1.5.1"
kagglehub = "0.3.12"
keras = "3.10.0"
kiwisolver = "1.4.8"
libclang = "18.1.1"
Markdown = "3.8"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
matplotlib = "3.10.3"
mdurl = "0.1.2"
ml-dtypes = "0.3.2"
mypy_extensions = "1.1.0"
namex = "0.0.9"
numpy = "1.26.4"
opencv-python = "4.11.0.86"
opt_einsum = "3.4.0"
optree = "0.15.0"
packaging = "25.0"
pandas = "2.2.3"
pathspec = "0.12.1"
pillow = "11.2.1"
platformdirs = "4.3.8"
protobuf = "4.25.7"
Pygments = "2.19.1"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
PyYAML = "6.0.2"
requests = "2.32.3"
rich = "14.0.0"
scikit-learn = "1.6.1"
scipy = "1.15.3"
setuptools = "80.8.0"
six = "1.17.0"
tensorboard = "2.16.2"
tensorboard-data-server = "0.7.2"
tensorflow = "2.16.2"
termcolor = "3.1.0"
threadpoolctl = "3.6.0"
tqdm = "4.67.1"
typing_extensions = "4.13.2"
tzdata = "2025.2"
urllib3 = "2.4.0"
Werkzeug = "3.1.3"
wheel = "0.45.1"
wrapt = "1.17.2"
